--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,5 @@
 body {
-    background-color: rgb(116, 181, 255);
-    background: black;
+    background-color: #2c3365;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -22,7 +21,6 @@ body {
         width: 100%;
         display: flex;
         justify-content: center;
-        // border: 1px solid black;
     }
 }
 
