add a theme switcher

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,7 @@ body {
     &__controls {
         position: fixed;
         bottom: 50px;
+        left: 0;
         width: 100%;
         display: flex;
         justify-content: center;
